portainer/portainer-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-scheme 
  namespace: portainer
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: portainer-http
  namespace: portainer
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`portainer.svc.private`)
      kind: Rule
      middlewares:
        - name: redirect-scheme
      services:
        - name: portainer
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: portainer-https
  namespace: portainer
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`portainer.svc.private`)
      kind: Rule     
      services:
        - name: portainer
          port: 80
  tls:
    certResolver: letsencrypt
